Corrected align of shopping cart divs

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,6 @@
 .App-cart__itemsList {
   text-align: center;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
